bdr.BDR2.scala.error
Erreur de compilation :
BDR2:4: error: '=>' expected but '=' found.
    case readMessage ="R" = > Right() forward()
                     ^